# Shmartaf-platform

./: .gitignore  .pre-commit-config.yaml  README.md  input_df.csv  naive_bayes_model.joblib  pyproject.toml  requirements.txt  run-pre-commit.yml  test.py
backend/: WorkingPOC_newSyntax.py  app.py  input_df.csv  logger.py  mltest.py  naive_bayes_model.joblib  process_data_before_learning.py  send_parent_id.py
backend/API/: server.py
backend/DB/: POC.py  POC_FuncDummy.py  POC_oldSyntax.py  WorkingPOC_newSyntax.py  api.py  app.py  crud.py  database.py  db_handler.py  mltest.py  models.py  newPOCtry.py  schemas.py  tesy_example_for_us.py
backend/DB/models/: __init__.py  babysitter.py  babysitter_skill.py  children.py  children_needs.py  contacted.py  favorites.py  need_skill.py  parent.py  reviews.py  scheduler.py  special_need.py  special_skill.py  users.py
backend/DB/router/: babysitter.py  children.py  parent.py  users.py
backend/database/: dal.py  database.py  faker_db.py  models.py  schemas.py
backend/router/: algo.py  babysitter.py  certifications.py  children.py  parent.py  requirements.py  reviews.py  scheduler.py  users.py
frontend/shmartaf/: package-lock.json  package.json
shmartaf/: README.md  amplify.yml  index.html  package-lock.json  package.json
shmartaf/src/: App.jsx  AuthContext.jsx  api.js  index.css  main.jsx
shmartaf/src/api/: apiService.js  crud.js
shmartaf/src/components/: Availability.jsx  BabysitterCard.jsx  ChildForm.jsx  ContactedListComponent.jsx  EditProfileForm.jsx  EventsTable.jsx  FavoriteCard.jsx  Header.jsx  JobOpp.jsx  (+15 more)
(+29 files in other folders)
