[tool.poetry]
name = "shmartaf-platform"
version = "0.1.0"
description = ""
authors = ["Or Basker <or.basker@ridewithvia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.27"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
setuptools = "^69.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
